--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "twitch-stream",
+    "name": "twitch-stream-embed",
     "version": "1.0.0",
-    "description": "This project was created using the Simplr Create command",
-    "main": "index.js",
+    "description": "A Web Component for easily embedding a Twitch.tv livestream to any website",
+    "main": "src/twitch-stream.js",
+    "files": ["src/twitch-stream.js"],
     "scripts": {
         "start": "wds --node-resolve --watch --open"
     },
-    "keywords": [],
+    "keywords": ["Twitch", "Livestream", "Vanilla", "WebComponents", "Javascript", "Buildless"],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Matsuuu/twitch-stream.git"
@@ -15,7 +16,7 @@
         "url": "https://github.com/Matsuuu/twitch-stream/issues"
     },
     "homepage": "https://github.com/Matsuuu/twitch-stream#readme",
-    "author": "",
+    "author": "Matsuuu <huhta.matias@gmail.com> (https://matsu.fi)",
     "license": "ISC",
     "devDependencies": {
         "@simplr-wc/eslint-config": "^1.0.4",
@@ -24,8 +25,6 @@
     },
     "prettier": "@simplr-wc/prettier-config",
     "eslintConfig": {
-        "extends": [
-            "@simplr-wc/eslint-config"
-        ]
+        "extends": ["@simplr-wc/eslint-config"]
     }
 }
