--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-    "name": "twitch-stream-embed",
-    "version": "1.0.3",
-    "description": "A Web Component for easily embedding a Twitch.tv livestream to any website",
-    "main": "src/twitch-stream.js",
-    "files": ["src/twitch-stream.js"],
-    "scripts": {
-        "start": "wds --node-resolve --watch --open"
-    },
-    "keywords": ["Twitch", "Livestream", "Vanilla", "WebComponents", "Javascript", "Buildless"],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Matsuuu/twitch-stream.git"
-    },
-    "bugs": {
-        "url": "https://github.com/Matsuuu/twitch-stream/issues"
-    },
-    "homepage": "https://github.com/Matsuuu/twitch-stream#readme",
-    "author": "Matsuuu <huhta.matias@gmail.com> (https://matsu.fi)",
-    "license": "ISC",
-    "devDependencies": {
-        "@simplr-wc/eslint-config": "^1.0.4",
-        "@simplr-wc/prettier-config": "^1.0.3",
-        "@web/dev-server": "^0.0.22"
-    },
-    "prettier": "@simplr-wc/prettier-config",
-    "eslintConfig": {
-        "extends": ["@simplr-wc/eslint-config"]
-    }
+  "name": "twitch-stream-embed",
+  "version": "1.0.3",
+  "description": "A Web Component for easily embedding a Twitch.tv livestream to any website",
+  "main": "src/twitch-stream.js",
+  "files": [
+    "src/twitch-stream.js"
+  ],
+  "scripts": {
+    "start": "wds --node-resolve --watch --open"
+  },
+  "keywords": [
+    "Twitch",
+    "Livestream",
+    "Vanilla",
+    "WebComponents",
+    "Javascript",
+    "Buildless"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Matsuuu/twitch-stream.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Matsuuu/twitch-stream/issues"
+  },
+  "homepage": "https://github.com/Matsuuu/twitch-stream#readme",
+  "author": "Matsuuu <huhta.matias@gmail.com> (https://matsu.fi)",
+  "license": "ISC",
+  "devDependencies": {
+    "@simplr-wc/eslint-config": "^1.0.4",
+    "@simplr-wc/prettier-config": "^1.0.3",
+    "@web/dev-server": "^0.0.22"
+  },
+  "prettier": "@simplr-wc/prettier-config",
+  "eslintConfig": {
+    "extends": [
+      "@simplr-wc/eslint-config"
+    ]
+  },
+  "customElements": "custom-elements.json"
 }
