--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "src/twitch-stream.js"
   ],
   "scripts": {
-    "start": "wds --node-resolve --watch --open"
+    "start": "wds --node-resolve --watch --open",
+    "analyze": "cem analyze"
   },
   "keywords": [
     "Twitch",
@@ -28,6 +29,7 @@
   "author": "Matsuuu <huhta.matias@gmail.com> (https://matsu.fi)",
   "license": "ISC",
   "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.4.7",
     "@simplr-wc/eslint-config": "^1.0.4",
     "@simplr-wc/prettier-config": "^1.0.3",
     "@web/dev-server": "^0.0.22"
